# codecov-rs

./: .envrc  .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  Makefile  README.md  codecov.yml  pyproject.toml  requirements.dev.txt  rustfmt.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  crate-maintenance.yml  publish.yml
benches/: pyreport.rs
bindings/: Cargo.toml
bindings/src/: error.rs  lib.rs
core/: Cargo.toml
core/benches/: pyreport.rs
core/examples/: parse_pyreport.rs  sql_to_pyreport.rs
core/fixtures/: .gitattributes
core/fixtures/pyreport/large/: worker-c71ddfd4cb1753c7a540e5248c2beaa079fc3341-report_json.json
core/src/: error.rs  lib.rs
core/src/parsers/: common.rs  json.rs  mod.rs
core/src/parsers/pyreport/: chunks.rs  chunks_serde.rs  mod.rs  report_json.rs  utils.rs
core/src/report/: mod.rs  models.rs
core/src/report/pyreport/: chunks.rs  mod.rs  report_json.rs  types.rs
core/src/report/pyreport/queries/: files_to_report_json.sql
core/src/report/sqlite/: mod.rs  models.rs  report.rs  report_builder.rs
core/src/report/sqlite/queries/: totals.sql
core/src/test_utils/: mod.rs  sqlite_report.rs  test_report.rs
core/tests/: test_pyreport_shim.rs
core/tests/common/: mod.rs
core/tests/common/sample_data/: codecov-rs-reports-json-d2a9ba1.txt
examples/: parse_pyreport.rs  sql_to_pyreport.rs
fixtures/pyreport/large/: worker-c71ddfd4cb1753c7a540e5248c2beaa079fc3341-chunks.txt
migrations/01-init/: down.sql  up.sql
migrations/2024-01-09-033635_init/: up.sql
python/: requirements.dev.txt
python/codecov_rs/: dummy_add.py  dummy_add.pyi  report.py  report.pyi
python/tests/: test_lib.py
src/: error.rs  lib.rs  parsers.rs  report.rs
src/parsers/: json.rs  mod.rs  pyreport_shim.rs
src/parsers/pyreport/: chunks.rs  mod.rs  report_json.rs  utils.rs
src/parsers/pyreport_shim/: chunks.rs  chunks_to_sql.rs  mod.rs  report_json.rs  report_json_to_sql.rs  sql_to_chunks.rs  sql_to_report_json.rs
src/parsers/pyreport_shim/chunks/: utils.rs
src/parsers/pyreport_shim/queries/: chunks_file_header.sql  samples_to_chunks.sql  sessions_to_report_json.sql
src/report/: mod.rs  models.rs  schema.rs  sqlite_report.rs  test.rs
src/report/pyreport/: chunks.rs  mod.rs  report_json.rs  types.rs
src/report/pyreport/queries/: chunks_file_header.sql  files_to_report_json.sql  samples_to_chunks.sql  sessions_to_report_json.sql
src/report/queries/: totals.sql
src/report/sqlite/: mod.rs  models.rs  report.rs  report_builder.rs
src/report/sqlite/queries/: totals.sql
test_utils/: Cargo.toml
test_utils/fixtures/pyreport/: .gitattributes  codecov-rs-chunks-d2a9ba1.txt
test_utils/src/: fixtures.rs  lib.rs  rng.rs
tests/: test_pyreport_shim.rs  test_sqlite_report.rs
tests/common/: mod.rs
