[package]
name = "codecov-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled", "limits"] }
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
rand = "0.8.5"

# SeaHash chosen due to:
# - widely used
# - portable and stable, results don't change
# - reads 8 bytes at a time, nice for longer inputs
# - outputs 64 bytes
# If we need to change it, use SQLite "schema version" to mark new versions
# which should use a different hash function.
seahash = "4.1.0"

memmap2 = "0.9.4"

include_dir = "0.7.3"
lazy_static = "1.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"

thiserror = "1.0.59"

winnow = "0.5.34"

serde_json = "1.0.117"

[dev-dependencies]
tempfile = "3.9.0"
mockall = { version = "0.12.1", features = ["nightly"] }

[features]
default = ["pyreport"]

pyreport = []
