[package]
name = "codecov-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["pyreport"]
pyreport = []

[profile.release]
debug = 1

[dependencies]
include_dir = "0.7.3"
memmap2 = "0.9.4"
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["bundled", "limits"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
seahash = "4.1.0"
serde_json = "1.0.117"
thiserror = "1.0.59"
winnow = "0.5.34"

[dev-dependencies]
divan = "0.1.14"
mockall = { version = "0.13.0", features = ["nightly"] }
tempfile = "3.9.0"

[[bench]]
name = "pyreport"
harness = false
